src/objects/blng__FinancePeriod__c.object
<CustomObject>
    <fields>
        <fullName>Meyers_Id__c</fullName>
        <description>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</inlineHelpText>
        <label>Meyers Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>blng__Family__c</fullName>
        <label>Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__FinanceBook__c</fullName>
        <label>Finance Book</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>blng__FinanceBook__c.blng__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>blng__FinanceBook__c</referenceTo>
        <relationshipLabel>Finance Periods</relationshipLabel>
        <relationshipName>FinancePeriods</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>blng__FinancePeriodFamily__c</fullName>
        <externalId>true</externalId>
        <label>Finance Period Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__LegalEntity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Name of legal entity associated with this finance period</inlineHelpText>
        <label>Finance Period Legal Entity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>blng__LegalEntity__c.blng__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>blng__LegalEntity__c</referenceTo>
        <relationshipLabel>Finance Periods</relationshipLabel>
        <relationshipName>FinancePeriods</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__NextOpenPeriod__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Next Open Period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>blng__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>blng__PeriodEndDate__c</fullName>
        <inlineHelpText>Select an end date for the finance period.</inlineHelpText>
        <label>Period End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__PeriodStartDate__c</fullName>
        <inlineHelpText>Select the beginning of the finance period.</inlineHelpText>
        <label>Period Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__PeriodStatus__c</fullName>
        <inlineHelpText>Select Open to capture all transactions or Closed to prevent further transactions.</inlineHelpText>
        <label>Period Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__FinancialPeriodStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__PeriodType__c</fullName>
        <formula>Text(blng__FinanceBook__r.blng__PeriodType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Refers to the period type selected in the finance book.</inlineHelpText>
        <label>Period Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__ReferenceId__c</fullName>
        <externalId>true</externalId>
        <label>Reference Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__UniqueId__c</fullName>
        <externalId>true</externalId>
        <label>Unique Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Finance Period</label>
    <listViews>
        <fullName>Finance_Periods_2017</fullName>
        <columns>NAME</columns>
        <columns>blng__PeriodStatus__c</columns>
        <columns>blng__PeriodType__c</columns>
        <columns>blng__PeriodStartDate__c</columns>
        <columns>blng__PeriodEndDate__c</columns>
        <columns>blng__NextOpenPeriod__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>2018</value>
        </filters>
        <label>Finance Periods-2017</label>
    </listViews>
    <listViews>
        <fullName>Finance_Periods_2018</fullName>
        <columns>NAME</columns>
        <columns>blng__PeriodStatus__c</columns>
        <columns>blng__PeriodStartDate__c</columns>
        <columns>blng__PeriodEndDate__c</columns>
        <columns>blng__NextOpenPeriod__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>2018</value>
        </filters>
        <label>Finance Periods-2018</label>
    </listViews>
    <listViews>
        <fullName>Finance_Periods_2019</fullName>
        <columns>NAME</columns>
        <columns>blng__PeriodStatus__c</columns>
        <columns>blng__PeriodStartDate__c</columns>
        <columns>blng__PeriodEndDate__c</columns>
        <columns>blng__NextOpenPeriod__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>2019</value>
        </filters>
        <label>Finance Periods-2019</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>blng__All</fullName>
        <columns>NAME</columns>
        <columns>blng__FinanceBook__c</columns>
        <columns>blng__PeriodStartDate__c</columns>
        <columns>blng__PeriodEndDate__c</columns>
        <columns>blng__NextOpenPeriod__c</columns>
        <columns>blng__PeriodStatus__c</columns>
        <columns>blng__LegalEntity__c</columns>
        <columns>Meyers_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Financial Period Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Finance Periods</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>